src/objects/Order_Item__c.object
<CustomObject>
    <description>Order line item detail from LZ database</description>
    <fields>
        <fullName>Base_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this order item has the base product of the order.</description>
        <label>Base Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Ignore__c</fullName>
        <formula>AND(NOT(ISBLANK(TEXT(Subscription_Status__c))), Extended_Price__c == 0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commission Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Login_c__c</fullName>
        <formula>Order__r.Customer_Login__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Login</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <description>Match the Extended Price field in LZData</description>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Filling_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filling Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_First_Subscription_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Marks true if the order item is first subscription renewal for any subscriptions</description>
        <label>Is First Subscription Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LZ_Order_ID__c</fullName>
        <description>Customer Order Number</description>
        <externalId>true</externalId>
        <label>LZ Order ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_Order_Item_ID__c</fullName>
        <externalId>true</externalId>
        <label>LZ Order Item ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_Parent_Order_Item_Id__c</fullName>
        <description>Match with fkParentOrderItem in OrderItem of LZData</description>
        <externalId>true</externalId>
        <label>LZ Parent Order Item Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_Product_ID_Commission__c</fullName>
        <label>LZ Product ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LZ_Product_ID_Text__c</fullName>
        <formula>Product__r.LZ_Product_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LZ Product ID Text</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LZ_Product_ID__c</fullName>
        <formula>Text( Product__r.LZ_Product_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LZ Product ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LZ_Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LZ Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Created_By__c</fullName>
        <label>Order Item Created By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Date_Time_Created__c</fullName>
        <description>Store the created date time of the order item created in LZ Data</description>
        <label>Order Item Date/Time Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Commission_Ignore__c</fullName>
        <description>Parent Commission Ignore</description>
        <formula>Parent__r.Commission_Ignore__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Commission Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relationship field to the parent record within Order Item object.</description>
        <label>Parent</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Product__c</fullName>
        <formula>Case(Product__r.Name,

&apos;Tax ID Obtainment&apos;,&apos;True&apos;,
&apos;Gold Card from American Express OPEN (SM)&apos;,&apos;True&apos;,
&apos;Registered Agent Service&apos;,&apos;True&apos;,
&apos;Business License Package&apos;,&apos;True&apos;,
&apos;Small Business Banking Consultation&apos;,&apos;True&apos;,
&apos;Website Design Consultation&apos;,&apos;True&apos;,
&apos;Business Credit Consultation&apos;,&apos;True&apos;,

&apos;False&apos;)</formula>
        <label>Partner Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Product Name at the time of the order item is created.</description>
        <inlineHelpText>Product Name at the time of the order item is created.</inlineHelpText>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Relationship_Type_Text__c</fullName>
        <formula>Relationship_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Relationship Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>Relationship_Type__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBR_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBR Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <description>Sales Tax</description>
        <label>Sales Tax</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscription_Cancellation_Date__c</fullName>
        <label>Subscription Cancellation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Active Won&apos;t Renew</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Not Yet Started</fullName>
                </value>
                <value>
                    <fullName>Payment Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Order_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Order Extension</label>
        <referenceTo>User_Order_Extension__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Order_ID__c</fullName>
        <description>matching the fkUserOrder field of OrderItem table in lzdata</description>
        <externalId>true</externalId>
        <label>Processing Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_Ledger__c</fullName>
        <formula>IF( 
ISBLANK( User_Order_ID__c ) , &quot;&quot; , 

 HYPERLINK( &quot;/apex/NextPadOM?processingNumber=&quot; &amp; User_Order_ID__c , 
 IMAGE( &quot;/servlet/servlet.ImageServer?id=015J0000000gMeD&amp;oid=00DJ0000003OOLG&quot; , 
 &quot;View Ledger&quot; ) , 
 &quot;_blank&quot; )

/* THIS DOESN&apos;T WORK
HYPERLINK(&quot;javascript:var html_doc = document.getElementsByTagName(&apos;head&apos;)[0]; var js =document.createElement(&apos;script&apos;);js.setAttribute(&apos;type&apos;,&apos;text/javascript&apos;);js.setAttribute(&apos;src&apos;,&apos;/support/console/31.0/integration.js&apos;);html_doc.appendChild(js); js.onload= function() { sforce.console.openPrimaryTab(null, &apos;/apex/NextPadOM?processingNumber=&apos; &amp; User_Order_ID__c, false, &apos;salesforce&apos;, null, &apos;salesforceTab&apos;); }; &quot;, 
IMAGE( &quot;/servlet/servlet.ImageServer?id=015J0000000gMeD&amp;oid=00DJ0000003OOLG&quot; , 
&quot;View Ledger&quot; ) 
) 
THIS DOESN&apos;T WORK */

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Ledger</label>
        <type>Text</type>
    </fields>
    <label>Order Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Product__c</columns>
        <columns>Extended_Price__c</columns>
        <columns>Quantity__c</columns>
        <columns>Relationship_Type__c</columns>
        <columns>Order_Item_Date_Time_Created__c</columns>
        <columns>Parent__c</columns>
        <columns>User_Order_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Order Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>